# slack-weather-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  gen_manifest.sh  manifest.json  pyproject.toml  shell.nix
slack_weather_bot/: __main__.py  bot.py  config.py  open_weather_map.py
