[tool.poetry]
name = "slack-weather-bot"
version = "0.1.0"
description = "A Slack bot that describes the weather"
authors = ["Michael"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
