[tool.poetry]
name = "slack-weather-bot"
version = "0.1.0"
description = "A Slack bot that describes the weather"
authors = ["Michael"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.9.4"
requests = "^2.26.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
types-requests = "^2.25.11"
pylint = "^2.11.1"
isort = "^5.10.0"

[tool.isort]
profile = "black"

[tool.pylint.config]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "no-else-return",
    "too-few-public-methods"
]
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
